# TCPSv_Simulate

./: CMakeLists.txt  CMakeLists.txt.user.7c451ca  ClientWorker.cpp  ClientWorker.h  ScaleCommand.h  ScaleInterface232.cpp  ScaleInterface232.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  main.cpp  main.qml
